# shinobi_lib

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/shinobi/: key_exchange.rs  methods.rs  mod.rs  shinobi.rs
src/types/: mod.rs  protected_secret.rs
