[package]
name = "shinobi_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8.5"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
num-bigint = { version = "0.4.6", features = ["rand"] }
